<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/today" />
        <item
            android:id="@+id/nav_android"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/android" />
        <item
            android:id="@+id/nav_ios"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ios" />
        <item
            android:id="@+id/nav_front_end"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/front_end" />
        <item
            android:id="@+id/nav_benefit"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/benefit" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/videos" />
    </group>

    <item android:title="@string/contact">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
